# tweet-delete

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  pytest.yml  python-publish.yaml
helm/tweet-delete/: Chart.yaml  values.yaml
helm/tweet-delete/templates/: _helpers.tpl  deployment.yaml
tests/: test_cli.py  test_td.py
tests/cassettes/: test_check_initial_tweets.yaml  test_check_low_quality_tweets.yaml  test_validate_auth_invalid.yaml  test_validate_auth_valid.yaml
tweet_delete/: deleter.py  entry.py  main.py  util.py
