[tool.poetry]
name = "tweet-delete"
version = "0.3.0"
description = "Self-destructing Tweet tool"
authors = ["Brenden Matthews <brenden@brndn.io>"]
license = "MIT"
documentation = "https://github.com/brndnmtthws/tweet-delete/blob/master/README.md"
homepage = "https://github.com/brndnmtthws/tweet-delete"
readme = "README.md"
repository = "https://github.com/brndnmtthws/tweet-delete.git"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = ">=7.1.2,<9.0.0"
python-twitter = "^3.5"
gevent = ">=20.6.2,<23.0.0"
python-dateutil = "^2.8.1"
pytimeparse = "^1.1.8"
colorama = "^0.4.3"
Pygments = "^2.6.1"
sparklines = "^0.4.2"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.1.3"
pytest-mock = "^3.5.1"
pytest-vcr = "^1.0.2"
black = "^22.10.0"
pylint = "^2.15.0"
pytest-gevent = "^1.1.0"

[tool.poetry.urls]
"GitHub" = "https://github.com/brndnmtthws/tweet-delete"
"Bug Tracker" = "https://github.com/brndnmtthws/tweet-delete/issues"

[tool.poetry.scripts]
tweet-delete = 'tweet_delete.entry:cli'
vscode = "vscode:vscode"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
